fixed error where longer reviews weren't wrapping

--- a/react-app/src/components/ProductPurchasePage/SingleItemPage.css
+++ b/react-app/src/components/ProductPurchasePage/SingleItemPage.css
@@ -125,7 +125,6 @@
     font-family: 'SFProMedium';
     height: 10em;
     resize: none;
-    width: ;
     margin-bottom: 20px;
     border-radius: 1em;
     padding: 8px;
